--- a/ticket535143/index.html
+++ b/ticket535143/index.html
@@ -85,7 +85,7 @@
           };
           await scanner.updateRuntimeSettings(settings);
 
-          await this.updateTemplate('template1');
+          await updateTemplate('template1');
 
           await scanner.setResolution(1920, 1080);
           scanner.maxCvsSideLength = 4096;
