--- a/gs1databar.html
+++ b/gs1databar.html
@@ -17,6 +17,7 @@
             let rs = await scanner.getRuntimeSettings();
             // gs1databars do not contains connected blocks, so we need lines to detect
             rs.localizationModes = [Dynamsoft.DBR.EnumLocalizationMode.LM_CONNECTED_BLOCKS, Dynamsoft.DBR.EnumLocalizationMode.LM_LINES, 0,0,0,0,0,0];
+            await scanner.updateRuntimeSettings(rs);
             scanner.onFrameRead = results => {
                 if (results.length > 0) console.log(results);
             };
