--- a/gs1databar.html
+++ b/gs1databar.html
@@ -17,6 +17,11 @@
             let rs = await scanner.getRuntimeSettings();
             // gs1databars do not contains connected blocks, so we need lines to detect
             rs.localizationModes = [Dynamsoft.DBR.EnumLocalizationMode.LM_CONNECTED_BLOCKS, Dynamsoft.DBR.EnumLocalizationMode.LM_LINES, 0,0,0,0,0,0];
+            rs.region.regionLeft = 5;
+            rs.region.regionTop = 30;
+            rs.region.regionLeft = 95;
+            rs.region.regionLeft = 70;
+            rs.region.regionMeasuredByPercentage = 1;
             await scanner.updateRuntimeSettings(rs);
             scanner.onFrameRead = results => {
                 if (results.length > 0) console.log(results);
