--- a/gs1databar.html
+++ b/gs1databar.html
@@ -19,8 +19,8 @@
             rs.localizationModes = [Dynamsoft.DBR.EnumLocalizationMode.LM_CONNECTED_BLOCKS, Dynamsoft.DBR.EnumLocalizationMode.LM_LINES, 0,0,0,0,0,0];
             rs.region.regionLeft = 5;
             rs.region.regionTop = 30;
-            rs.region.regionLeft = 95;
-            rs.region.regionLeft = 70;
+            rs.region.regionRight = 95;
+            rs.region.regionBottom = 70;
             rs.region.regionMeasuredByPercentage = 1;
             await scanner.updateRuntimeSettings(rs);
             scanner.onFrameRead = results => {
