--- a/gs1databar-t.html
+++ b/gs1databar-t.html
@@ -14,10 +14,15 @@
         // Initializes and uses the SDK
         (async () => {
             let scanner = await Dynamsoft.DBR.BarcodeScanner.createInstance();
-            //let rs = await scanner.getRuntimeSettings();
+            let rs = await scanner.getRuntimeSettings();
             // gs1databars do not contains connected blocks, so we need lines to detect
             //rs.localizationModes = [Dynamsoft.DBR.EnumLocalizationMode.LM_CONNECTED_BLOCKS, Dynamsoft.DBR.EnumLocalizationMode.LM_LINES, 0,0,0,0,0,0];
-            //await scanner.updateRuntimeSettings(rs);
+            rs.region.regionLeft = 5;
+            rs.region.regionTop = 30;
+            rs.region.regionRight = 95;
+            rs.region.regionBottom = 70;
+            rs.region.regionMeasuredByPercentage = 1;
+            await scanner.updateRuntimeSettings(rs);
             scanner.onFrameRead = results => {
                 if (results.length > 0) console.log(results);
             };
