--- a/gs1databar.html
+++ b/gs1databar.html
@@ -7,21 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.1/dist/dbr.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.3.1/dist/dbr.js"></script>
     <script>
         // Specifies a license, you can visit https://www.dynamsoft.com/customer/license/trialLicense?ver=9.6.1&utm_source=github&product=dbr&package=js to get your own trial license good for 30 days. 
         Dynamsoft.DBR.BarcodeScanner.license = 'DLS2eyJvcmdhbml6YXRpb25JRCI6IjIwMDAwMSJ9';
         // Initializes and uses the SDK
         (async () => {
-            let scanner = await Dynamsoft.DBR.BarcodeScanner.createInstance();
+            let scanner = self.scanner = await Dynamsoft.DBR.BarcodeScanner.createInstance();
+            scanner.updateRuntimeSettings('speed');
             let rs = await scanner.getRuntimeSettings();
             // gs1databars do not contains connected blocks, so we need lines to detect
-            rs.localizationModes = [Dynamsoft.DBR.EnumLocalizationMode.LM_CONNECTED_BLOCKS, Dynamsoft.DBR.EnumLocalizationMode.LM_LINES, 0,0,0,0,0,0];
-            rs.region.regionLeft = 5;
-            rs.region.regionTop = 30;
-            rs.region.regionRight = 95;
-            rs.region.regionBottom = 70;
-            rs.region.regionMeasuredByPercentage = 1;
+            rs.localizationModes = [Dynamsoft.DBR.EnumLocalizationMode.LM_CONNECTED_BLOCKS, Dynamsoft.DBR.EnumLocalizationMode.LM_SCAN_DIRECTLY, Dynamsoft.DBR.EnumLocalizationMode.LM_LINES, 0,0,0,0,0];
+            // rs.region.regionLeft = 5;
+            // rs.region.regionTop = 30;
+            // rs.region.regionRight = 95;
+            // rs.region.regionBottom = 70;
+            // rs.region.regionMeasuredByPercentage = 1;
             await scanner.updateRuntimeSettings(rs);
             scanner.onFrameRead = results => {
                 if (results.length > 0) console.log(results);
