--- a/gs1databar-t.html
+++ b/gs1databar-t.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- <script src="https://npm.scannerproxy.com/cdn/@scannerproxy/dynamsoft-javascript-barcode@9.6.1-dev-20221223114035/dist/dbr.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.1/dist/dbr.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.1-iv-202212230033/dist/dbr.js"></script>
     <script>
         // Specifies a license, you can visit https://www.dynamsoft.com/customer/license/trialLicense?ver=9.6.1&utm_source=github&product=dbr&package=js to get your own trial license good for 30 days. 
         Dynamsoft.DBR.BarcodeScanner.license = 'DLS2eyJvcmdhbml6YXRpb25JRCI6IjIwMDAwMSJ9';
@@ -27,6 +27,7 @@
             rs.region.regionBottom = 70;
             rs.region.regionMeasuredByPercentage = 1;
             await scanner.updateRuntimeSettings(rs);
+            scanner.resultHighlightingTimeout = 100;
             scanner.onFrameRead = results => {
                 if (results.length > 0) console.log(results);
             };
