--- a/gs1databar.html
+++ b/gs1databar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.3.1/dist/dbr.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.1/dist/dbr.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.1-iv-202212230033/dist/dbr.js"></script>
     <script>
         // Specifies a license, you can visit https://www.dynamsoft.com/customer/license/trialLicense?ver=9.6.1&utm_source=github&product=dbr&package=js to get your own trial license good for 30 days. 
         Dynamsoft.DBR.BarcodeScanner.license = 'DLS2eyJvcmdhbml6YXRpb25JRCI6IjIwMDAwMSJ9';
@@ -22,11 +22,16 @@
             // gs1databars do not contains connected blocks, so we need lines to detect
             rs.localizationModes = [Dynamsoft.DBR.EnumLocalizationMode.LM_CONNECTED_BLOCKS, Dynamsoft.DBR.EnumLocalizationMode.LM_SCAN_DIRECTLY, Dynamsoft.DBR.EnumLocalizationMode.LM_LINES, 0,0,0,0,0];
             rs.region.regionLeft = 5;
-            rs.region.regionTop = 30;
+            rs.region.regionTop = 35;
             rs.region.regionRight = 95;
-            rs.region.regionBottom = 70;
+            rs.region.regionBottom = 65;
             rs.region.regionMeasuredByPercentage = 1;
             await scanner.updateRuntimeSettings(rs);
+            let ss = await scanner.getScanSettings();
+            ss.whenToPlaySoundforSuccessfulRead = 'frame';
+            ss.oneDRememberFrameCount = 1;
+            await scanner.updateScanSettings(ss);
+            if(null != scanner.resultHighlightingTimeout){scanner.resultHighlightingTimeout = 100;}
             scanner.onFrameRead = results => {
                 if (results.length > 0) console.log(results);
             };
