--- a/gs1databar.html
+++ b/gs1databar.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.3.1/dist/dbr.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.1-iv-202212230033/dist/dbr.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.3.1/dist/dbr.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.1-iv-202212230033/dist/dbr.js"></script>
     <script>
         // Specifies a license, you can visit https://www.dynamsoft.com/customer/license/trialLicense?ver=9.6.1&utm_source=github&product=dbr&package=js to get your own trial license good for 30 days. 
-        Dynamsoft.DBR.BarcodeScanner.license = 't0068NQAAAIdmrODIhcOU/lz3L6PADYm6qvO76vXyXD1fDMdchoISXlRCMLu+ZXhOBGAwMGGrVe1K2PJpk0tNap7NdS86M1g=';
+        Dynamsoft.DBR.BarcodeScanner.license = 't0068NQAAAIdmrODIhcOU/lz3L6PADYm6qvO76vXyXD1fDMdchoISXlRCMLu+ZXhOBGAwMGGrVe1K2PJpk0tNap7NdS86M1g='; // if license invalid or expired, decode will be slower
         // Initializes and uses the SDK
         (async () => {
             let scanner = self.scanner = await Dynamsoft.DBR.BarcodeScanner.createInstance();
