--- a/dbrjs111.html
+++ b/dbrjs111.html
@@ -7,11 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="https://npm.scannerproxy.com/cdn/eruda@2.6.1/eruda.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.1/dist/dbr.js"></script>
     <script>
         // Specifies a license, you can visit https://www.dynamsoft.com/customer/license/trialLicense?ver=9.6.1&utm_source=github&product=dbr&package=js to get your own trial license good for 30 days. 
         Dynamsoft.DBR.BarcodeScanner.license = 'DLS2eyJvcmdhbml6YXRpb25JRCI6IjIwMDAwMSJ9';
         // Initializes and uses the SDK
+        Dynamsoft.DBR.BarcodeReader._bWasmDebug = true;
+        Dynamsoft.DBR.BarcodeReader._onLog = console.log;
+
         (async () => {
             let scanner = await Dynamsoft.DBR.BarcodeScanner.createInstance();
             let rs = await scanner.getRuntimeSettings();
