--- a/dbrjs111.html
+++ b/dbrjs111.html
@@ -9,7 +9,8 @@
 <body>
     <script src="https://npm.scannerproxy.com/cdn/eruda@2.6.1/eruda.js"></script>
     <script>eruda.init();</script>
-    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.1/dist/dbr.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.1/dist/dbr.js"></script> -->
+    <script src="https://npm.scannerproxy.com/cdn/@scannerproxy/dynamsoft-javascript-barcode@9.6.1-dev-20230113160939/dist/dbr.js"></script>
     <script>
         // Specifies a license, you can visit https://www.dynamsoft.com/customer/license/trialLicense?ver=9.6.1&utm_source=github&product=dbr&package=js to get your own trial license good for 30 days. 
         Dynamsoft.DBR.BarcodeScanner.license = 'DLS2eyJvcmdhbml6YXRpb25JRCI6IjIwMDAwMSJ9';
