--- a/use_case_10267/index.html
+++ b/use_case_10267/index.html
@@ -24,8 +24,8 @@
        * To use the library, you need to first specify a license key using the API "license" as shown below.
        */
 
-      Dynamsoft.DBR.BarcodeReader.license =
-        "DLS2eyJoYW5kc2hha2VDb2RlIjoiMTAxMjM1NDYyLVRYbFhaV0pRY205cVgyUmljZyIsIm9yZ2FuaXphdGlvbklEIjoiMTAxMjM1NDYyIiwiY2hlY2tDb2RlIjo2NTcwNDU3NDl9";
+      // Dynamsoft.DBR.BarcodeReader.license =
+      //   "DLS2eyJoYW5kc2hha2VDb2RlIjoiMTAxMjM1NDYyLVRYbFhaV0pRY205cVgyUmljZyIsIm9yZ2FuaXphdGlvbklEIjoiMTAxMjM1NDYyIiwiY2hlY2tDb2RlIjo2NTcwNDU3NDl9";
 
       /**
        * You can visit https://www.dynamsoft.com/customer/license/trialLicense?utm_source=github&product=dbr&package=js to get your own trial license good for 30 days.
