--- a/UseCase_10380/helloworld-pwa.html
+++ b/UseCase_10380/helloworld-pwa.html
@@ -20,7 +20,6 @@
 
   <body>
     <h1 style="font-size: 1.5em">Hello World for PWA</h1>
-    Loading...
     <div id="container" style="position:relative;margin-top:20px;width: 80vw; height: 70vh;border: 1px solid red">
       <div class="dce-video-container" style="position:absolute;left:0;top:0;width:100%;height:100%;"></div>
     </div>
@@ -63,6 +62,16 @@
           scanner.onUniqueRead = (txt, result) => {
             console.log(format + ": " + txt);
           };
+
+          let settings = await scanner.getRuntimeSettings();
+          settings.region = {
+            regionLeft: 20,
+            regionTop: 20,
+            regionRight: 75,
+            regionBottom: 75,
+            regionMeasuredByPercentage: 1,
+          };
+          await scanner.updateRuntimeSettings(settings);
 
           const container = document.querySelector("#container");
           await scanner.setUIElement(container);
